# ai-eval-cookbook

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: answer_relevance.md  calibration_ece_brier.md  classification_metrics.md  exact_match_accuracy.md  faithfulness_nli.md  group_fairness_disparity.md  hallucination_rate.md  json_schema_validity.md  latency_cost_budget.md  llm_judge_rubric.md  ngram_bleu.md  pairwise_preference_elo.md  pass_at_k.md  rag_triad.md  refusal_safety_eval.md  regression_eval.md  retrieval_metrics.md  rouge_overlap.md  self_consistency.md  semantic_similarity.md  tool_call_correctness.md  toxicity_lexical_eval.md
src/ai_eval_cookbook/: __init__.py  answer_relevance.py  calibration_ece_brier.py  classification_metrics.py  cli.py  exact_match_accuracy.py  faithfulness_nli.py  group_fairness_disparity.py  hallucination_rate.py  json_schema_validity.py  latency_cost_budget.py  llm_judge_rubric.py  (+12 more)
tests/: test_answer_relevance.py  test_calibration_ece_brier.py  test_classification_metrics.py  test_exact_match_accuracy.py  test_faithfulness_nli.py  test_group_fairness_disparity.py  test_hallucination_rate.py  test_import.py  test_json_schema_validity.py  test_latency_cost_budget.py  test_llm_judge_rubric.py  test_ngram_bleu.py  test_pairwise_preference_elo.py  test_pass_at_k.py  test_rag_triad.py  test_refusal_safety_eval.py  test_regression_eval.py  test_retrieval_metrics.py  test_rouge_overlap.py  test_self_consistency.py  test_semantic_similarity.py  test_tool_call_correctness.py  test_toxicity_lexical_eval.py
