[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-eval-cookbook"
description = "Provider-agnostic, runnable offline recipes for evaluating LLM systems: faithfulness, hallucination rate, rubric grading, retrieval metrics, calibration, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "ai-eval-cookbook contributors" }]
keywords = ["llm", "evaluation", "eval", "rag", "metrics", "nlp"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/aymandakir-gh/ai-eval-cookbook"
Repository = "https://github.com/aymandakir-gh/ai-eval-cookbook"

[project.scripts]
aiec = "ai_eval_cookbook.cli:main"

[tool.hatch.version]
path = "src/ai_eval_cookbook/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_eval_cookbook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
